# hs-records

./: .travis.yml  Application.hs  CustomDBDataTypes.hs  Foundation.hs  Model.hs  Settings.hs  hs-records.cabal  stack.yaml
Handler/: Appointment.hs  Comment.hs  FormUtils.hs  Home.hs  Nurse.hs  Patient.hs  Physician.hs  Settings.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
templates/: add-appointment.hamlet  homepage.hamlet  settings.hamlet
test/: TestImport.hs
test/Handler/: AppointmentSpec.hs  CommentSpec.hs  NurseSpec.hs  PatientSpec.hs  PhysicianSpec.hs  SettingsSpec.hs  TestUtils.hs
